syntax = "proto3";

package userManagement;

service UserManagementService {
    rpc FindAllUsers (Empty) returns (Users) {}
    rpc FindOneUser (FindOneUserDto) returns (User) {}
    rpc CreateUser (CreateUserDto) returns (User) {}
    rpc UpdateUser (UpdateUserDto) returns (User) {}
    rpc DeleteUser (FindOneUserDto) returns (User) {}
}

message Empty {}

message Users {
    repeated User users = 1;
}

message CreateUserDto {
    string email = 1;
    string password = 2;
}

message FindOneUserDto {
    int32 id = 1;
    string email = 2;
}

message UpdateUserDto {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

